--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 <a class="apresentacao__links__navegacao" href="https://wa.link/gj76gf"><img src="./assets/whatsapp_red-12.png"> Whatsapp</a>
                 <a class="apresentacao__links__navegacao" href="https://www.linkedin.com/in/gisele-lima-tech/"><img src="./assets/linkedin-red-10.png"> LinkedIn</a>
                 <a class="apresentacao__links__navegacao" href="https://www.instagram.com/gica.lima7?igsh=MWkwYXZmYnhmeHk4eA%3D%3D&utm_source=qr"><img src="./assets/instagram-red-10.png"> Instagram</a>
+                <a class="apresentacao__links__navegacao" href="https://maps.app.goo.gl/jHsaf7xLvCd4Yf2V6"><img src="./assets/endereco-red-10.png"> Endereço</a>
             </div>
         </section>
         <img class="apresentacao__imagem" src="./assets/MauricioCampos.png" alt="Mauricio Campos sorrindo">
