--- a/index.html
+++ b/index.html
@@ -19,10 +19,9 @@
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <h1 class="titulo_nome">Mauricio Campos</h1>
-            <h2 class="apresentacao__conteudo__titulo">Muito Prazer! Sou seu Consultor Imobiliário:<strong class="titulo-destaque"> Pronto para fechar negócio!</strong></h2>
-            <p class="apresentacao__conteudo__texto">Olá! Sou o Mauricio Campos, corretor de imóveis. Meu objetivo é ajudar meus clientes a encontrarem o imóvel ideal. Com 12 anos de experiência no mercado imobiliário, tenho um grande conhecimento dos bairros da Zona Oeste e me mantenho atualizado sobre as tendências do mercado. Cada imóvel tem uma história e eu estou aqui para ajudar você a encontrar o mais adequado para sua família.</p>
-            <p class="apresentacao__conteudo__textlink">Veja mais detalhes do meu trabalho.
-                
+            <h2 class="apresentacao__conteudo__titulo">Muito prazer! Sou Maurício Campos, seu consultor imobiliário <strong class="titulo-destaque"> especializado em maximizar resultados.</strong></h2>
+            <p class="apresentacao__conteudo__texto">Com 12 anos de experiência no mercado imobiliário e um profundo conhecimento da Zona Oeste, meu trabalho vai além de simplesmente encontrar imóveis. Eu ajudo empresas a identificar locais estratégicos, alinhando suas necessidades de expansão com oportunidades reais de crescimento. Se o objetivo é aumentar sua presença e gerar mais leads, estou aqui para fornecer soluções imobiliárias precisas e eficientes, com total foco nos seus objetivos de negócio.</p>
+            <p class="apresentacao__conteudo__textlink">Vamos otimizar seu espaço para o sucesso?  </p>              
             <a class="cabecalho__menu__link" href="cards.html">Clique aqui.</a>  
             <div class="apresentacao__links">
 
