--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </nav>
     </header>
     <main class="apresentacao">
-        <img src="/assets/logo_ONE_vermelho.png" alt="logomarca LOPES ONE">
+        <img class="img_logo" src="/assets/logo_ONE_vermelho.png" alt="logomarca LOPES ONE">
         <section class="apresentacao__conteudo">
             <h1 class="titulo_nome">Mauricio Campos</h1>
             <h2 class="apresentacao__conteudo__titulo">Muito prazer! Sou Maurício Campos, seu consultor imobiliário <strong class="titulo-destaque"> especializado em maximizar resultados.</strong></h2>
