--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <a class="apresentacao__links__navegacao" href="https://maps.app.goo.gl/jHsaf7xLvCd4Yf2V6"><img src="./assets/endereco-red-10.png"></a>
             </div>
         </section>
-        <img class="apresentacao__imagem" src="./assets/MauricioCampos.png" alt="Mauricio Campos sorrindo">
+        <img class="apresentacao__imagem" class="imagem_geral" src="./assets/MauricioCampos.png" alt="Mauricio Campos sorrindo">
     </main>
     <footer class="rodape">
         <a href="https://wa.link/7bpfpd">Desenvolvido por Gisele Lima</a>
