--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
         </nav>
     </header>
     <main class="apresentacao">
-        <img src="/assets/logo_ONE_vermelho.png" alt="logo da LOPES ONE" width="100" height="50">
-        <section class="apresentacao__conteudo">
+            <section class="apresentacao__conteudo">
             <h1 class="titulo_nome">Mauricio Campos</h1>
             <h2 class="apresentacao__conteudo__titulo">Muito prazer! Sou Maurício Campos, seu consultor imobiliário <strong class="titulo-destaque"> especializado em maximizar resultados.</strong></h2>
             <p class="apresentacao__conteudo__texto">Com 12 anos de experiência no mercado imobiliário e um profundo conhecimento da Zona Oeste, meu trabalho vai além de simplesmente encontrar imóveis. Eu ajudo empresas a identificar locais estratégicos, alinhando suas necessidades de expansão com oportunidades reais de crescimento. Se o objetivo é aumentar sua presença e gerar mais leads, estou aqui para fornecer soluções imobiliárias precisas e eficientes, com total foco nos seus objetivos de negócio.</p>
@@ -32,7 +31,8 @@
                 <a class="apresentacao__links__navegacao" href="https://maps.app.goo.gl/jHsaf7xLvCd4Yf2V6"><img src="./assets/endereco-red-10.png"></a>
             </div>
         </section>
-        <img class="apresentacao__imagem" class="imagem_geral" src="./assets/MauricioCampos.png" alt="Mauricio Campos sorrindo">
+        <img src="/assets/logo_ONE_vermelho.png" alt="logo da LOPES ONE" width="200" height="auto">
+        <img class="apresentacao__imagem" src="./assets/MauricioCampos.png" alt="Mauricio Campos sorrindo" width="400" height="auto">
     </main>
     <footer class="rodape">
         <a href="https://wa.link/7bpfpd">Desenvolvido por Gisele Lima</a>
