--- a/cards.html
+++ b/cards.html
@@ -15,7 +15,7 @@
         </nav>
     </header>   
     <main class="apresentacao">
-        <img class="apresentacao__imagem" src="./assets/linda casa_modelo white.png" alt="foto de uma linda casa">
+        <img class="imagem_geral" src="./assets/linda casa_modelo white.png" alt="foto de uma linda casa">
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulocard">Minha especialidade é negociar imóveis!</h1>
             <h3 class="apresentacao__conteudo__titulocard">Compra</h3>
@@ -30,7 +30,7 @@
         </section>
     </main>
     <footer class="rodape">
-        <a href="https://wa.link/7bpfpd">Desenvolvido por Gisele Lima</a>
+        <a class="apresentacao__links__navegacao" href="https://wa.link/7bpfpd">Desenvolvido por Gisele Lima</a>
     </footer>
 </body>
 </html>
