--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <img class="apresentacao__imagem" src="./assets/MauricioCampos.png" alt="Mauricio Campos sorrindo" width="300" height="auto">
     </main>
     <footer class="rodape">
-        <a href="https://wa.link/7bpfpd">Desenvolvido por Gisele Lima</a>
+        <a class="apresentacao__links__navegacao" href="https://wa.link/7bpfpd">Desenvolvido por Gisele Lima</a>
     </footer>
 </body>
 </html>
