--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a class="cabecalho__menu__link" href="about.html">Sobre mim</a>  
         </nav>
     </header>
-    <img class="logo" src="/assets/logo_ONE_vermelho_sem fundo.png" alt="logo da LOPES ONE"> 
+    <img class="logo" src="/assets/logo imob_IA.png" alt="logo da imobiliaria"> 
     <main class="apresentacao">
             <section class="apresentacao__conteudo">
             <h1 class="titulo_nome">Mauricio Campos</h1>
