--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
             <div class="apresentacao__links">
                 <a class="apresentacao__links__navegacao" href="https://wa.link/gj76gf"><img src="./assets/whatsapp_red-12.png"></a>
                 <a class="apresentacao__links__navegacao" href="https://www.linkedin.com/in/gisele-lima-tech/"><img src="./assets/linkedin-red-10.png"></a>
+            </div>
+            <div class="apresentacao__links">
                 <a class="apresentacao__links__navegacao" href="https://www.instagram.com/gica.lima7?igsh=MWkwYXZmYnhmeHk4eA%3D%3D&utm_source=qr"><img src="./assets/instagram-red-10.png"></a>
                 <a class="apresentacao__links__navegacao" href="https://maps.app.goo.gl/jHsaf7xLvCd4Yf2V6"><img src="./assets/endereco-red-10.png"></a>
             </div>
