--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h1 class="titulo_nome">Mauricio Campos</h1>
             <h2 class="apresentacao__conteudo__titulo">Muito prazer! Sou Maurício Campos, seu consultor imobiliário na Real Estate Imóveis <strong class="titulo-destaque"> especializado em maximizar resultados.</strong></h2>
             <p class="apresentacao__conteudo__texto">Com 12 anos de experiência no mercado imobiliário e um profundo conhecimento da Zona Oeste, meu trabalho vai além de simplesmente encontrar imóveis. Eu ajudo empresas a identificar locais estratégicos, alinhando suas necessidades de expansão com oportunidades reais de crescimento. Se o objetivo é aumentar sua presença e gerar mais leads, estou aqui para fornecer soluções imobiliárias precisas e eficientes, com total foco nos seus objetivos de negócio.</p>
-            <p class="apresentacao__conteudo__textlink">Vamos otimizar seu espaço para o sucesso?  </p>              
+            <p class="apresentacao__conteudo__textlink">Vamos otimizar seu espaço para o sucesso!  </p>              
             <a class="cabecalho__menu__link" href="https://wa.link/gj76gf">Fale comigo.</a>  
             <h4 class="apresentacao__links__subtitulo">Acesse também minhas redes:</h4>
             <div class="apresentacao__links">
