--- a/about.html
+++ b/about.html
@@ -18,10 +18,13 @@
             <section class="apresentacao__conteudo">
             <img class="imagem_geral" src="./assets/Mauricio e sua familia na praia.png" alt="foto de Mauricio com sua família">
             <h1 class="apresentacao__conteudo__titulo">Sobre Mim</h1>
-            <p class="apresentacao__conteudo__texto">Olá! Sou o Mauricio Campos. Formado em Administração de Empresas, comecei minha carreira no mundo corporativo. Tive a oportunidade de passar por diversas áreas das empresas e logo me identifiquei muito com a área comercial. Com isso decidi estudar e focar numa transição de carreira.</p>
-            <p class="apresentacao__conteudo__texto">Minha trajetória no mercado imobiliário foi muito planejada: fiz diversos cursos de especialização e logo em seguida comecei a atender amigos e parentes. Fui adquirindo confiança e gosto pelas conquistas. E a cada sorriso de um cliente que assina seu contrato alimenta e me incentiva a me tornar melhor no que faço há 12 anos no mercado imobiliário.</p>
-            <p class="apresentacao__conteudo__texto">Sou casado e tenho um casal de gêmeos lindos que mudaram completamente minha vida para melhor e são minha inspiração e razão de viver. Gosto muito de futebol de salão, até montei um time com os amigos da faculdade e jogamos sempre que sobra um tempo na agenda porque, desde que tivemos os pequenos, minha prioridade é aproveitar o tempo com eles em passeios na praia, que eles se divertem muito!</p>
-        </section>
+            <p class="apresentacao__conteudo__texto">Olá! Sou o Mauricio Campos. Formado em Administração de Empresas, comecei minha carreira no mundo corporativo. Tive a oportunidade de passar por diversas áreas das empresas e logo me identifiquei muito com a área comercial. Com isso decidi estudar e focar numa transição de carreira.<br>
+            <br>
+            Minha trajetória no mercado imobiliário foi muito planejada: fiz diversos cursos de especialização e logo em seguida comecei a atender amigos e parentes. Fui adquirindo confiança e gosto pelas conquistas. E a cada sorriso de um cliente que assina seu contrato alimenta e me incentiva a me tornar melhor no que faço há 12 anos no mercado imobiliário.<br>
+            <br>
+            Sou casado e tenho um casal de gêmeos lindos que mudaram completamente minha vida para melhor e são minha inspiração e razão de viver. Gosto muito de futebol de salão, até montei um time com os amigos da faculdade e jogamos sempre que sobra um tempo na agenda porque, desde que tivemos os pequenos, minha prioridade é aproveitar o tempo com eles em passeios na praia, que eles se divertem muito!</p>
+            <br>
+            </section>
         
     </main>
     <footer class="rodape">
